src/objects/Child_Litigation_Note__c.object
<CustomObject>
    <fields>
        <fullName>Child_Litigation_Activity__c</fullName>
        <label>Child Litigation Activity</label>
        <referenceTo>Child_Litigation_Activity__c</referenceTo>
        <relationshipLabel>Child Litigation Notes</relationshipLabel>
        <relationshipName>R00N60000001Z3aHEAS</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Litigation_Notes__c</fullName>
        <label>Litigation Notes</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Attorney confirmed cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attorney confirmed filed with court</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attorney confirmed NTQ served</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autocreated Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Called Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled/other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled/Paid in Full</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled/Partial Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled/Skipped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled/Vacated/Moved Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consent Judgement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversation with Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversation with Resident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Default Judgment entered/Received Judgment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emailed Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evicted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holdover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Important Note</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Judgement Absolute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Judgment Executed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Judgment Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Fees Final</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Locked Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nuisance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Court Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Eviction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Lock Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Warrant/Warrant Filed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prior Resident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received Call From Community</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Child Litigation Note</label>
    <nameField>
        <displayFormat>Note-{0}</displayFormat>
        <label>Child Litigation Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Child Litigation Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>